--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,12 @@ body {
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 
 @media screen and (max-width:600px) {
-    .one-column {
+    .two-column,
+    .four-column,
+    .three-column {
         width: 100%;
+    }
+    .header {
+        background-image: url('');
     }
 }
